Add trello stuff to .env.template and update README

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,9 @@ FLASK_DEBUG=true
 
 # Required to use Flask's session feature (for storing todos in a browser cookie in the first exercise): https://flask.palletsprojects.com/en/2.3.x/config/#SECRET_KEY
 SECRET_KEY=secret-key
+
+#Required to use the trello api to track state of todo-items: https://developer.atlassian.com/cloud/trello/guides/rest-api/api-introduction/#your-first-api-call
+TRELLO_API_KEY=trello-api-key
+TRELLO_API_TOKEN=trello-api-token
+
+TRELLO_BOARD_ID=trello-board-id
