--- a/.env.test
+++ b/.env.test
@@ -5,8 +5,8 @@ FLASK_APP=todo_app/app
 # Turn on debug mode (which enables reloading on code changes and the interactive debugger: https://flask.palletsprojects.com/en/2.3.x/config/#DEBUG)
 FLASK_DEBUG=true
 
-#Required to use the trello api to track state of todo-items: https://developer.atlassian.com/cloud/trello/guides/rest-api/api-introduction/#your-first-api-call
-TRELLO_API_KEY=trello-api-key
-TRELLO_API_TOKEN=trello-api-token
+#Required to use the trello api to track state of todo-items
+TRELLO_API_KEY=trello_api_key
+TRELLO_API_TOKEN=trello_api_token
 
-TRELLO_BOARD_ID=trello-board-id
+TRELLO_BOARD_ID=trello_board_id
