--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -1,6 +1,7 @@
 name: Continuous Integration
 on: [push]
 
+
 jobs:
   build:
     name: Build and test
@@ -8,4 +9,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: docker build --target test --tag todo-app:test .  
-    - run: docker run --env-file ./.env todo-app:test
+    - run: docker run --env-file ./.env.test todo-app:test
