--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -6,7 +6,7 @@ on:
       - '.vscode/**'
       - 'architecture_diagrams/**'
       - 'ansible/**'
-  pull-request:
+  pull_request:
     paths-ignore:
       - 'README.md'
       - '.vscode/**'
